syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";


option go_package = "github.com/WithSoull/UserServer/pkg/user/v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  };
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1/get/{id}"
    };
  };
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1/udpate/{id}"
      body: "*"
    };
  };
  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/user/v1/update_password/{id}"
      body: "*"
    };
  };
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1/delete/{id}"
    };
  };
}

message UserInfo {
  string name = 1;
  string email = 2;
}

message User {
  int64 id = 1;
  UserInfo user_info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
  UserInfo user_info = 1;
  string password = 2;
  string password_confirm = 3;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message UpdatePasswordRequest {
  int64 id = 1;
  string password = 2;
  string password_confirm = 3;
}

message DeleteRequest {
  int64 id = 1;
}
